--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
-    position: relative;
+    position: fixed;
     left: 0;
     overflow-x: hidden;
+	margin: 0;
 }
 
 #background {
@@ -10,7 +11,25 @@ body {
 	width: 100%;
 }
 
+#wrap{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background: none;
+}
+
+#inner{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: -20px;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
 #slide_menu{
+	z-index: 5;
     position: fixed;
     top: 0;
     left: -360px;
@@ -22,7 +41,7 @@ body {
 .layer{
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 5;
     display: none;
     width: 100%;
     height: 100%;
@@ -34,8 +53,8 @@ body.open{
 }
 
 #button{
-	position: absolute;
-	top: 10px;
+	position: fixed;
+	top: 13px;
 	left: 20px;
 	padding: 0;
     	margin: 0;
@@ -64,6 +83,7 @@ height: 300px;
 width: 1800px;
 background-color: #fff;
 transform: skew(-50deg,-15deg) rotate(25deg);
+text-align: center;
 }
 
 .sheet2{
@@ -88,6 +108,8 @@ background-color: #ff00ff;
 transform: skew(-50deg,-15deg) rotate(25deg);
 }
 
+
+
 .sheet4{
 z-index: 1;
 position: absolute;
@@ -108,4 +130,11 @@ height: 300px;
 width: 1800px;
 background-color: #000;
 transform: skew(-50deg,-15deg) rotate(25deg);
+}
+
+.title{
+	position: absolute;
+	bottom: 0;
+	transform: scale(3, 1);
+	text-align: center;
 }
